--- a/src/components/Ranking/ranking.scss
+++ b/src/components/Ranking/ranking.scss
@@ -156,7 +156,7 @@
       text-align: left;
     }
     &.grades {
-      text-align: center;
+      text-align: right;
       &.sss,
       &.ss,
       &.s {
